--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
 PyYAML==6.0.1
-requests==2.28.2
 schedule~=1.2.2
+chardet~=5.2.0
+paramiko~=3.5.0
+cryptography~=43.0.1
+ruamel.yaml
+scp~=0.15.0
+chardet
+Flask==3.0.3
+requests~=2.28.2
