--- a/Superspeed.yaml
+++ b/Superspeed.yaml
@@ -3,48 +3,167 @@ external-controller: :9090
 log-level: info
 mode: Rule
 port: 7890
-proxies: []
+proxies:
+- alterId: 0
+  cipher: auto
+  name: SG-103.14.92.61-254
+  port: 12953
+  server: 63.lwdh.us
+  skip-cert-verify: true
+  tls: true
+  type: vmess
+  uuid: a32313ad-5e39-4f9a-9cad-512041790050
+- alterId: 0
+  cipher: auto
+  name: 加拿大 017
+  network: ws
+  port: 2086
+  server: 104.19.47.77
+  tls: false
+  type: vmess
+  uuid: e9e3cc13-db48-4cc1-8c24-7626439a5339
+  ws-opts:
+    headers:
+      Host: ip14.freegradely.xyz
+    path: github.com/Alvin9999
+- alterId: 64
+  cipher: auto
+  name: 美国5|@ripaojiedian
+  port: 58831
+  server: 120.232.153.27
+  skip-cert-verify: false
+  tls: false
+  type: vmess
+  uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+- alterId: 0
+  cipher: auto
+  name: RELAY-104.19.45.245-181
+  network: ws
+  port: 2095
+  server: 104.19.45.245
+  skip-cert-verify: true
+  tls: false
+  type: vmess
+  uuid: 7a737f41-b792-4260-94ff-3d864da67b80
+  ws-opts:
+    headers:
+      Host: onea.flha.ru
+    path: /
+- alterId: 64
+  cipher: auto
+  name: 香港4|@ripaojiedian
+  port: 35601
+  server: 120.232.153.40
+  skip-cert-verify: false
+  tls: false
+  type: vmess
+  uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
 proxy-groups:
 - name: 🔰 节点选择
-  proxies: []
+  proxies:
+  - SG-103.14.92.61-254
+  - 加拿大 017
+  - 美国5|@ripaojiedian
+  - RELAY-104.19.45.245-181
+  - 香港4|@ripaojiedian
   type: select
 - interval: 300
   name: ♻️ 自动选择
-  proxies: []
+  proxies:
+  - SG-103.14.92.61-254
+  - 加拿大 017
+  - 美国5|@ripaojiedian
+  - RELAY-104.19.45.245-181
+  - 香港4|@ripaojiedian
   type: url-test
   url: http://www.gstatic.com/generate_204
 - name: 🎥 NETFLIX
-  proxies: []
+  proxies:
+  - SG-103.14.92.61-254
+  - 加拿大 017
+  - 美国5|@ripaojiedian
+  - RELAY-104.19.45.245-181
+  - 香港4|@ripaojiedian
   type: select
 - name: ⛔️ 广告拦截
-  proxies: []
+  proxies:
+  - SG-103.14.92.61-254
+  - 加拿大 017
+  - 美国5|@ripaojiedian
+  - RELAY-104.19.45.245-181
+  - 香港4|@ripaojiedian
   type: select
 - name: 🚫 运营劫持
-  proxies: []
+  proxies:
+  - SG-103.14.92.61-254
+  - 加拿大 017
+  - 美国5|@ripaojiedian
+  - RELAY-104.19.45.245-181
+  - 香港4|@ripaojiedian
   type: select
 - name: 🌍 国外媒体
-  proxies: []
+  proxies:
+  - SG-103.14.92.61-254
+  - 加拿大 017
+  - 美国5|@ripaojiedian
+  - RELAY-104.19.45.245-181
+  - 香港4|@ripaojiedian
   type: select
 - name: 🌏 国内媒体
-  proxies: []
+  proxies:
+  - SG-103.14.92.61-254
+  - 加拿大 017
+  - 美国5|@ripaojiedian
+  - RELAY-104.19.45.245-181
+  - 香港4|@ripaojiedian
   type: select
 - name: Ⓜ️ 微软服务
-  proxies: []
+  proxies:
+  - SG-103.14.92.61-254
+  - 加拿大 017
+  - 美国5|@ripaojiedian
+  - RELAY-104.19.45.245-181
+  - 香港4|@ripaojiedian
   type: select
 - name: 📲 电报信息
-  proxies: []
+  proxies:
+  - SG-103.14.92.61-254
+  - 加拿大 017
+  - 美国5|@ripaojiedian
+  - RELAY-104.19.45.245-181
+  - 香港4|@ripaojiedian
   type: select
 - name: 🍎 苹果服务
-  proxies: []
+  proxies:
+  - SG-103.14.92.61-254
+  - 加拿大 017
+  - 美国5|@ripaojiedian
+  - RELAY-104.19.45.245-181
+  - 香港4|@ripaojiedian
   type: select
 - name: 🎯 全球直连
-  proxies: []
+  proxies:
+  - SG-103.14.92.61-254
+  - 加拿大 017
+  - 美国5|@ripaojiedian
+  - RELAY-104.19.45.245-181
+  - 香港4|@ripaojiedian
   type: select
 - name: 🛑 全球拦截
-  proxies: []
+  proxies:
+  - SG-103.14.92.61-254
+  - 加拿大 017
+  - 美国5|@ripaojiedian
+  - RELAY-104.19.45.245-181
+  - 香港4|@ripaojiedian
   type: select
 - name: 🐟 漏网之鱼
-  proxies: []
+  proxies:
+  - SG-103.14.92.61-254
+  - 加拿大 017
+  - 美国5|@ripaojiedian
+  - RELAY-104.19.45.245-181
+  - 香港4|@ripaojiedian
   type: select
 rules:
 - DOMAIN-SUFFIX,local,🎯 全球直连
@@ -9089,14 +9208,20 @@ rules:
 - DOMAIN-SUFFIX,hdslb.com,🌏 国内媒体
 - DOMAIN,upos-hz-mirrorakam.akamaized.net,🌏 国内媒体
 - DOMAIN,apiintl.biliapi.net,🌏 国内媒体
-- DOMAIN-SUFFIX,iqiyi.com,🌏 国内媒体
-- DOMAIN-SUFFIX,iqiyipic.com,🌏 国内媒体
+- DOMAIN,intel-cache.m.iqiyi.com,🌏 国内媒体
+- DOMAIN,intel-cache.video.iqiyi.com,🌏 国内媒体
+- DOMAIN,intl-rcd.iqiyi.com,🌏 国内媒体
+- DOMAIN,intl-subscription.iqiyi.com,🌏 国内媒体
+- DOMAIN-SUFFIX,inter.iqiyi.com,🌏 国内媒体
+- DOMAIN-SUFFIX,inter.ptqy.gitv.tv,🌏 国内媒体
+- DOMAIN-SUFFIX,intl.iqiyi.com,🌏 国内媒体
 - DOMAIN-SUFFIX,iq.com,🌏 国内媒体
-- DOMAIN-SUFFIX,qy.net,🌏 国内媒体
-- DOMAIN-SUFFIX,gitv.tv,🌏 国内媒体
-- DOMAIN-SUFFIX,71.am,🌏 国内媒体
-- DOMAIN-KEYWORD,qiyi,🌏 国内媒体
-- DOMAIN,cache.video.iqiyi.com,🌏 国内媒体
+- IP-CIDR,103.44.56.0/22,🌏 国内媒体,no-resolve
+- IP-CIDR,118.26.120.0/24,🌏 国内媒体,no-resolve
+- IP-CIDR,118.26.32.0/23,🌏 国内媒体,no-resolve
+- IP-CIDR,223.119.62.225/28,🌏 国内媒体,no-resolve
+- IP-CIDR,23.40.241.251/32,🌏 国内媒体,no-resolve
+- IP-CIDR,23.40.242.10/32,🌏 国内媒体,no-resolve
 - DOMAIN-SUFFIX,api.mob.app.letv.com,🌏 国内媒体
 - DOMAIN-SUFFIX,v.smtcdns.com,🌏 国内媒体
 - DOMAIN-SUFFIX,vv.video.qq.com,🌏 国内媒体
