--- a/Superspeed.yaml
+++ b/Superspeed.yaml
@@ -6,111 +6,628 @@ port: 7890
 proxies:
 - alterId: 0
   cipher: auto
-  name: SG-103.14.92.61-254
-  port: 12953
-  server: 63.lwdh.us
-  skip-cert-verify: true
-  tls: true
-  type: vmess
-  uuid: a32313ad-5e39-4f9a-9cad-512041790050
-- alterId: 64
-  cipher: auto
-  name: 香港4|@ripaojiedian
-  port: 35601
-  server: 120.232.153.40
-  skip-cert-verify: false
+  name: 美国 CloudFlare节点 27
+  network: ws
+  port: 80
+  server: 172.64.229.209
   tls: false
   type: vmess
-  uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
+  uuid: 5820093a-bb7d-4e15-8575-1a529f2d8282
+  ws-opts:
+    headers:
+      Host: rn2.hostmjj.com
+    path: /
 - alterId: 0
   cipher: auto
-  name: 香港5|@ripaojiedian
-  port: 44826
-  server: ambxxid02hk.dorabbb.top
-  skip-cert-verify: false
+  name: 美国 CloudFlare节点 3
+  network: ws
+  port: 80
+  server: 162.159.136.106
   tls: false
   type: vmess
-  uuid: 0b411754-172d-406c-95fb-7ee650a5b9ad
+  uuid: 5820093a-bb7d-4e15-8575-1a529f2d8282
+  ws-opts:
+    headers:
+      Host: rn2.hostmjj.com
+    path: /
+- alterId: 0
+  cipher: auto
+  name: RELAY-104.19.45.245-200
+  network: ws
+  port: 2095
+  server: 104.19.45.245
+  skip-cert-verify: true
+  tls: false
+  type: vmess
+  uuid: 7a737f41-b792-4260-94ff-3d864da67b80
+  ws-opts:
+    headers:
+      Host: onea.flha.ru
+    path: /
+- alterId: 0
+  cipher: auto
+  name: 美国 CloudFlare节点 16
+  network: ws
+  port: 2095
+  server: 104.19.45.82
+  tls: false
+  type: vmess
+  uuid: 7a737f41-b792-4260-94ff-3d864da67b80
+  ws-opts:
+    headers:
+      Host: onea.flha.ru
+    path: /
+- alterId: 0
+  cipher: auto
+  name: 美国 004
+  network: ws
+  port: 2086
+  server: 172.64.166.16
+  skip-cert-verify: true
+  tls: false
+  type: vmess
+  udp: true
+  uuid: e9e3cc13-db48-4cc1-8c24-7626439a5339
+  ws-opts:
+    headers:
+      Host: ip2.1457230.xyz
+    path: github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 美国 CloudFlare节点 52
+  network: ws
+  port: 2086
+  server: 104.19.32.88
+  tls: false
+  type: vmess
+  uuid: e9e3cc13-db48-4cc1-8c24-7626439a5339
+  ws-opts:
+    headers:
+      Host: ip5-4.freegradely.xyz
+    path: github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 加拿大 014
+  network: ws
+  port: 2086
+  server: fbi.gov
+  tls: false
+  type: vmess
+  uuid: e9e3cc13-db48-4cc1-8c24-7626439a5339
+  ws-opts:
+    headers:
+      Host: ip1.1789034.xyz
+    path: github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: RELAY-172.67.30.171-306
+  network: ws
+  port: 2086
+  server: icook.tw
+  skip-cert-verify: true
+  tls: false
+  type: vmess
+  uuid: e9e3cc13-db48-4cc1-8c24-7626439a5339
+  ws-opts:
+    headers:
+      Host: ip1.1789034.xyz
+    path: github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 加拿大 015
+  network: ws
+  port: 2086
+  server: 104.19.46.17
+  tls: false
+  type: vmess
+  uuid: e9e3cc13-db48-4cc1-8c24-7626439a5339
+  ws-opts:
+    headers:
+      Host: ip13.freegradely.xyz
+    path: github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 加拿大 032
+  network: ws
+  port: 2086
+  server: 104.19.47.36
+  tls: false
+  type: vmess
+  uuid: e9e3cc13-db48-4cc1-8c24-7626439a5339
+  ws-opts:
+    headers:
+      Host: ip2.1457230.xyz
+    path: github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 美国 CloudFlare节点 21
+  network: ws
+  port: 2086
+  server: 104.22.37.243
+  tls: false
+  type: vmess
+  uuid: e9e3cc13-db48-4cc1-8c24-7626439a5339
+  ws-opts:
+    headers:
+      Host: ip1.1789034.xyz
+    path: github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 加拿大 003
+  network: ws
+  port: 2086
+  server: russia.com
+  tls: false
+  type: vmess
+  uuid: e9e3cc13-db48-4cc1-8c24-7626439a5339
+  ws-opts:
+    headers:
+      Host: ip1.1789034.xyz
+    path: github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 美国 CloudFlare节点 39
+  network: ws
+  port: 2086
+  server: 104.26.5.66
+  tls: false
+  type: vmess
+  uuid: e9e3cc13-db48-4cc1-8c24-7626439a5339
+  ws-opts:
+    headers:
+      Host: ip1.1789034.xyz
+    path: github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 美国 CloudFlare节点 40
+  network: ws
+  port: 2086
+  server: 172.67.70.92
+  tls: false
+  type: vmess
+  uuid: e9e3cc13-db48-4cc1-8c24-7626439a5339
+  ws-opts:
+    headers:
+      Host: ip1.1789034.xyz
+    path: github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: RELAY-172.67.75.172-238
+  network: ws
+  port: 2086
+  server: ip.sb
+  skip-cert-verify: true
+  tls: false
+  type: vmess
+  uuid: e9e3cc13-db48-4cc1-8c24-7626439a5339
+  ws-opts:
+    headers:
+      Host: ip1.1789034.xyz
+    path: github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 加拿大 043
+  network: ws
+  port: 2095
+  server: 104.19.45.238
+  tls: false
+  type: vmess
+  uuid: 7a737f41-b792-4260-94ff-3d864da67b80
+  ws-opts:
+    headers:
+      Host: onea.flha.ru
+    path: /
+- alterId: 0
+  cipher: auto
+  name: 美国 021
+  network: ws
+  port: 2086
+  server: 172.64.167.19
+  skip-cert-verify: true
+  tls: false
+  type: vmess
+  udp: true
+  uuid: e9e3cc13-db48-4cc1-8c24-7626439a5339
+  ws-opts:
+    headers:
+      Host: ip2.1457230.xyz
+    path: github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: RELAY-104.19.32.216-205
+  network: ws
+  port: 2086
+  server: 104.19.32.216
+  skip-cert-verify: true
+  tls: false
+  type: vmess
+  uuid: e9e3cc13-db48-4cc1-8c24-7626439a5339
+  ws-opts:
+    headers:
+      Host: ip14.freegradely.xyz
+    path: github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: RELAY-172.64.229.209-215
+  network: ws
+  port: 80
+  server: 172.64.229.209
+  skip-cert-verify: true
+  tls: false
+  type: vmess
+  uuid: 5820093a-bb7d-4e15-8575-1a529f2d8282
+  ws-opts:
+    headers:
+      Host: rn2.hostmjj.com
+    path: /
+- alterId: 0
+  cipher: auto
+  name: 日本 东京Fastly节点
+  network: ws
+  port: 80
+  server: www.hkbu.edu.hk
+  tls: false
+  type: vmess
+  uuid: c0b05000-23dd-4de9-9041-ec130166ff1a
+  ws-opts:
+    headers:
+      Host: nmsl.kp
+    path: /aries?ed=2048
+- alterId: 0
+  cipher: auto
+  name: 美国 026
+  network: ws
+  port: 2086
+  server: 172.64.166.28
+  skip-cert-verify: true
+  tls: false
+  type: vmess
+  udp: true
+  uuid: e9e3cc13-db48-4cc1-8c24-7626439a5339
+  ws-opts:
+    headers:
+      Host: ip2.1457230.xyz
+    path: github.com/Alvin9999
+- alterId: 0
+  cipher: auto
+  name: 11|日本 东京Fastly节点
+  network: ws
+  port: 80
+  server: www.hkbu.edu.hk
+  tls: false
+  type: vmess
+  uuid: c0b05000-23dd-4de9-9041-ec130166ff1a
+  ws-opts:
+    headers:
+      Host: nmsl.kp
+    path: /aries?ed=2048
 proxy-groups:
 - name: 🔰 节点选择
   proxies:
-  - SG-103.14.92.61-254
-  - 香港4|@ripaojiedian
-  - 香港5|@ripaojiedian
+  - 美国 CloudFlare节点 27
+  - 美国 CloudFlare节点 3
+  - RELAY-104.19.45.245-200
+  - 美国 CloudFlare节点 16
+  - 美国 004
+  - 美国 CloudFlare节点 52
+  - 加拿大 014
+  - RELAY-172.67.30.171-306
+  - 加拿大 015
+  - 加拿大 032
+  - 美国 CloudFlare节点 21
+  - 加拿大 003
+  - 美国 CloudFlare节点 39
+  - 美国 CloudFlare节点 40
+  - RELAY-172.67.75.172-238
+  - 加拿大 043
+  - 美国 021
+  - RELAY-104.19.32.216-205
+  - RELAY-172.64.229.209-215
+  - 日本 东京Fastly节点
+  - 美国 026
+  - 11|日本 东京Fastly节点
   type: select
 - interval: 300
   name: ♻️ 自动选择
   proxies:
-  - SG-103.14.92.61-254
-  - 香港4|@ripaojiedian
-  - 香港5|@ripaojiedian
+  - 美国 CloudFlare节点 27
+  - 美国 CloudFlare节点 3
+  - RELAY-104.19.45.245-200
+  - 美国 CloudFlare节点 16
+  - 美国 004
+  - 美国 CloudFlare节点 52
+  - 加拿大 014
+  - RELAY-172.67.30.171-306
+  - 加拿大 015
+  - 加拿大 032
+  - 美国 CloudFlare节点 21
+  - 加拿大 003
+  - 美国 CloudFlare节点 39
+  - 美国 CloudFlare节点 40
+  - RELAY-172.67.75.172-238
+  - 加拿大 043
+  - 美国 021
+  - RELAY-104.19.32.216-205
+  - RELAY-172.64.229.209-215
+  - 日本 东京Fastly节点
+  - 美国 026
+  - 11|日本 东京Fastly节点
   type: url-test
   url: http://www.gstatic.com/generate_204
 - name: 🎥 NETFLIX
   proxies:
-  - SG-103.14.92.61-254
-  - 香港4|@ripaojiedian
-  - 香港5|@ripaojiedian
+  - 美国 CloudFlare节点 27
+  - 美国 CloudFlare节点 3
+  - RELAY-104.19.45.245-200
+  - 美国 CloudFlare节点 16
+  - 美国 004
+  - 美国 CloudFlare节点 52
+  - 加拿大 014
+  - RELAY-172.67.30.171-306
+  - 加拿大 015
+  - 加拿大 032
+  - 美国 CloudFlare节点 21
+  - 加拿大 003
+  - 美国 CloudFlare节点 39
+  - 美国 CloudFlare节点 40
+  - RELAY-172.67.75.172-238
+  - 加拿大 043
+  - 美国 021
+  - RELAY-104.19.32.216-205
+  - RELAY-172.64.229.209-215
+  - 日本 东京Fastly节点
+  - 美国 026
+  - 11|日本 东京Fastly节点
   type: select
 - name: ⛔️ 广告拦截
   proxies:
-  - SG-103.14.92.61-254
-  - 香港4|@ripaojiedian
-  - 香港5|@ripaojiedian
+  - 美国 CloudFlare节点 27
+  - 美国 CloudFlare节点 3
+  - RELAY-104.19.45.245-200
+  - 美国 CloudFlare节点 16
+  - 美国 004
+  - 美国 CloudFlare节点 52
+  - 加拿大 014
+  - RELAY-172.67.30.171-306
+  - 加拿大 015
+  - 加拿大 032
+  - 美国 CloudFlare节点 21
+  - 加拿大 003
+  - 美国 CloudFlare节点 39
+  - 美国 CloudFlare节点 40
+  - RELAY-172.67.75.172-238
+  - 加拿大 043
+  - 美国 021
+  - RELAY-104.19.32.216-205
+  - RELAY-172.64.229.209-215
+  - 日本 东京Fastly节点
+  - 美国 026
+  - 11|日本 东京Fastly节点
   type: select
 - name: 🚫 运营劫持
   proxies:
-  - SG-103.14.92.61-254
-  - 香港4|@ripaojiedian
-  - 香港5|@ripaojiedian
+  - 美国 CloudFlare节点 27
+  - 美国 CloudFlare节点 3
+  - RELAY-104.19.45.245-200
+  - 美国 CloudFlare节点 16
+  - 美国 004
+  - 美国 CloudFlare节点 52
+  - 加拿大 014
+  - RELAY-172.67.30.171-306
+  - 加拿大 015
+  - 加拿大 032
+  - 美国 CloudFlare节点 21
+  - 加拿大 003
+  - 美国 CloudFlare节点 39
+  - 美国 CloudFlare节点 40
+  - RELAY-172.67.75.172-238
+  - 加拿大 043
+  - 美国 021
+  - RELAY-104.19.32.216-205
+  - RELAY-172.64.229.209-215
+  - 日本 东京Fastly节点
+  - 美国 026
+  - 11|日本 东京Fastly节点
   type: select
 - name: 🌍 国外媒体
   proxies:
-  - SG-103.14.92.61-254
-  - 香港4|@ripaojiedian
-  - 香港5|@ripaojiedian
+  - 美国 CloudFlare节点 27
+  - 美国 CloudFlare节点 3
+  - RELAY-104.19.45.245-200
+  - 美国 CloudFlare节点 16
+  - 美国 004
+  - 美国 CloudFlare节点 52
+  - 加拿大 014
+  - RELAY-172.67.30.171-306
+  - 加拿大 015
+  - 加拿大 032
+  - 美国 CloudFlare节点 21
+  - 加拿大 003
+  - 美国 CloudFlare节点 39
+  - 美国 CloudFlare节点 40
+  - RELAY-172.67.75.172-238
+  - 加拿大 043
+  - 美国 021
+  - RELAY-104.19.32.216-205
+  - RELAY-172.64.229.209-215
+  - 日本 东京Fastly节点
+  - 美国 026
+  - 11|日本 东京Fastly节点
   type: select
 - name: 🌏 国内媒体
   proxies:
-  - SG-103.14.92.61-254
-  - 香港4|@ripaojiedian
-  - 香港5|@ripaojiedian
+  - 美国 CloudFlare节点 27
+  - 美国 CloudFlare节点 3
+  - RELAY-104.19.45.245-200
+  - 美国 CloudFlare节点 16
+  - 美国 004
+  - 美国 CloudFlare节点 52
+  - 加拿大 014
+  - RELAY-172.67.30.171-306
+  - 加拿大 015
+  - 加拿大 032
+  - 美国 CloudFlare节点 21
+  - 加拿大 003
+  - 美国 CloudFlare节点 39
+  - 美国 CloudFlare节点 40
+  - RELAY-172.67.75.172-238
+  - 加拿大 043
+  - 美国 021
+  - RELAY-104.19.32.216-205
+  - RELAY-172.64.229.209-215
+  - 日本 东京Fastly节点
+  - 美国 026
+  - 11|日本 东京Fastly节点
   type: select
 - name: Ⓜ️ 微软服务
   proxies:
-  - SG-103.14.92.61-254
-  - 香港4|@ripaojiedian
-  - 香港5|@ripaojiedian
+  - 美国 CloudFlare节点 27
+  - 美国 CloudFlare节点 3
+  - RELAY-104.19.45.245-200
+  - 美国 CloudFlare节点 16
+  - 美国 004
+  - 美国 CloudFlare节点 52
+  - 加拿大 014
+  - RELAY-172.67.30.171-306
+  - 加拿大 015
+  - 加拿大 032
+  - 美国 CloudFlare节点 21
+  - 加拿大 003
+  - 美国 CloudFlare节点 39
+  - 美国 CloudFlare节点 40
+  - RELAY-172.67.75.172-238
+  - 加拿大 043
+  - 美国 021
+  - RELAY-104.19.32.216-205
+  - RELAY-172.64.229.209-215
+  - 日本 东京Fastly节点
+  - 美国 026
+  - 11|日本 东京Fastly节点
   type: select
 - name: 📲 电报信息
   proxies:
-  - SG-103.14.92.61-254
-  - 香港4|@ripaojiedian
-  - 香港5|@ripaojiedian
+  - 美国 CloudFlare节点 27
+  - 美国 CloudFlare节点 3
+  - RELAY-104.19.45.245-200
+  - 美国 CloudFlare节点 16
+  - 美国 004
+  - 美国 CloudFlare节点 52
+  - 加拿大 014
+  - RELAY-172.67.30.171-306
+  - 加拿大 015
+  - 加拿大 032
+  - 美国 CloudFlare节点 21
+  - 加拿大 003
+  - 美国 CloudFlare节点 39
+  - 美国 CloudFlare节点 40
+  - RELAY-172.67.75.172-238
+  - 加拿大 043
+  - 美国 021
+  - RELAY-104.19.32.216-205
+  - RELAY-172.64.229.209-215
+  - 日本 东京Fastly节点
+  - 美国 026
+  - 11|日本 东京Fastly节点
   type: select
 - name: 🍎 苹果服务
   proxies:
-  - SG-103.14.92.61-254
-  - 香港4|@ripaojiedian
-  - 香港5|@ripaojiedian
+  - 美国 CloudFlare节点 27
+  - 美国 CloudFlare节点 3
+  - RELAY-104.19.45.245-200
+  - 美国 CloudFlare节点 16
+  - 美国 004
+  - 美国 CloudFlare节点 52
+  - 加拿大 014
+  - RELAY-172.67.30.171-306
+  - 加拿大 015
+  - 加拿大 032
+  - 美国 CloudFlare节点 21
+  - 加拿大 003
+  - 美国 CloudFlare节点 39
+  - 美国 CloudFlare节点 40
+  - RELAY-172.67.75.172-238
+  - 加拿大 043
+  - 美国 021
+  - RELAY-104.19.32.216-205
+  - RELAY-172.64.229.209-215
+  - 日本 东京Fastly节点
+  - 美国 026
+  - 11|日本 东京Fastly节点
   type: select
 - name: 🎯 全球直连
   proxies:
-  - SG-103.14.92.61-254
-  - 香港4|@ripaojiedian
-  - 香港5|@ripaojiedian
+  - 美国 CloudFlare节点 27
+  - 美国 CloudFlare节点 3
+  - RELAY-104.19.45.245-200
+  - 美国 CloudFlare节点 16
+  - 美国 004
+  - 美国 CloudFlare节点 52
+  - 加拿大 014
+  - RELAY-172.67.30.171-306
+  - 加拿大 015
+  - 加拿大 032
+  - 美国 CloudFlare节点 21
+  - 加拿大 003
+  - 美国 CloudFlare节点 39
+  - 美国 CloudFlare节点 40
+  - RELAY-172.67.75.172-238
+  - 加拿大 043
+  - 美国 021
+  - RELAY-104.19.32.216-205
+  - RELAY-172.64.229.209-215
+  - 日本 东京Fastly节点
+  - 美国 026
+  - 11|日本 东京Fastly节点
   type: select
 - name: 🛑 全球拦截
   proxies:
-  - SG-103.14.92.61-254
-  - 香港4|@ripaojiedian
-  - 香港5|@ripaojiedian
+  - 美国 CloudFlare节点 27
+  - 美国 CloudFlare节点 3
+  - RELAY-104.19.45.245-200
+  - 美国 CloudFlare节点 16
+  - 美国 004
+  - 美国 CloudFlare节点 52
+  - 加拿大 014
+  - RELAY-172.67.30.171-306
+  - 加拿大 015
+  - 加拿大 032
+  - 美国 CloudFlare节点 21
+  - 加拿大 003
+  - 美国 CloudFlare节点 39
+  - 美国 CloudFlare节点 40
+  - RELAY-172.67.75.172-238
+  - 加拿大 043
+  - 美国 021
+  - RELAY-104.19.32.216-205
+  - RELAY-172.64.229.209-215
+  - 日本 东京Fastly节点
+  - 美国 026
+  - 11|日本 东京Fastly节点
   type: select
 - name: 🐟 漏网之鱼
   proxies:
-  - SG-103.14.92.61-254
-  - 香港4|@ripaojiedian
-  - 香港5|@ripaojiedian
+  - 美国 CloudFlare节点 27
+  - 美国 CloudFlare节点 3
+  - RELAY-104.19.45.245-200
+  - 美国 CloudFlare节点 16
+  - 美国 004
+  - 美国 CloudFlare节点 52
+  - 加拿大 014
+  - RELAY-172.67.30.171-306
+  - 加拿大 015
+  - 加拿大 032
+  - 美国 CloudFlare节点 21
+  - 加拿大 003
+  - 美国 CloudFlare节点 39
+  - 美国 CloudFlare节点 40
+  - RELAY-172.67.75.172-238
+  - 加拿大 043
+  - 美国 021
+  - RELAY-104.19.32.216-205
+  - RELAY-172.64.229.209-215
+  - 日本 东京Fastly节点
+  - 美国 026
+  - 11|日本 东京Fastly节点
   type: select
 rules:
 - DOMAIN-SUFFIX,local,🎯 全球直连
@@ -9155,20 +9672,14 @@ rules:
 - DOMAIN-SUFFIX,hdslb.com,🌏 国内媒体
 - DOMAIN,upos-hz-mirrorakam.akamaized.net,🌏 国内媒体
 - DOMAIN,apiintl.biliapi.net,🌏 国内媒体
-- DOMAIN,intel-cache.m.iqiyi.com,🌏 国内媒体
-- DOMAIN,intel-cache.video.iqiyi.com,🌏 国内媒体
-- DOMAIN,intl-rcd.iqiyi.com,🌏 国内媒体
-- DOMAIN,intl-subscription.iqiyi.com,🌏 国内媒体
-- DOMAIN-SUFFIX,inter.iqiyi.com,🌏 国内媒体
-- DOMAIN-SUFFIX,inter.ptqy.gitv.tv,🌏 国内媒体
-- DOMAIN-SUFFIX,intl.iqiyi.com,🌏 国内媒体
+- DOMAIN-SUFFIX,iqiyi.com,🌏 国内媒体
+- DOMAIN-SUFFIX,iqiyipic.com,🌏 国内媒体
 - DOMAIN-SUFFIX,iq.com,🌏 国内媒体
-- IP-CIDR,103.44.56.0/22,🌏 国内媒体,no-resolve
-- IP-CIDR,118.26.120.0/24,🌏 国内媒体,no-resolve
-- IP-CIDR,118.26.32.0/23,🌏 国内媒体,no-resolve
-- IP-CIDR,223.119.62.225/28,🌏 国内媒体,no-resolve
-- IP-CIDR,23.40.241.251/32,🌏 国内媒体,no-resolve
-- IP-CIDR,23.40.242.10/32,🌏 国内媒体,no-resolve
+- DOMAIN-SUFFIX,qy.net,🌏 国内媒体
+- DOMAIN-SUFFIX,gitv.tv,🌏 国内媒体
+- DOMAIN-SUFFIX,71.am,🌏 国内媒体
+- DOMAIN-KEYWORD,qiyi,🌏 国内媒体
+- DOMAIN,cache.video.iqiyi.com,🌏 国内媒体
 - DOMAIN-SUFFIX,api.mob.app.letv.com,🌏 国内媒体
 - DOMAIN-SUFFIX,v.smtcdns.com,🌏 国内媒体
 - DOMAIN-SUFFIX,vv.video.qq.com,🌏 国内媒体
